# gym-backend

./: .gitignore  Cargo.toml  README.md  config.cfg
src/: main.rs  sleeper.rs
src/core_functions/: error_logger.rs  get_start_of_week.rs  mod.rs  uk_datetime_now.rs  weekday_matcher.rs
src/firebase/: firebase.rs  mod.rs  service_key.rs
src/knn_regressor/: data.rs  mod.rs  regressor.rs
src/web_scraper/: extractor.rs  mod.rs  schedule.rs  timing.rs
