[package]
name = "gym-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
bincode = "1.3.3"
chrono = "0.4.26"
chrono-tz = "0.8.3"
jsonwebtoken = "8.3.0"
regex = "1.9.3"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = "1.0.183"
serde_json = "1.0.104"
serde_urlencoded = "0.7.1"
tokio = { version = "1.29.1", features = ["full"]}
